logout function + styles

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -38,13 +38,39 @@
     float: right;
     padding: 0.8rem;
     border-radius: 6px;
-    border: none;
     font-weight: 600;
     box-shadow: 1px 1px solid #e9c04e;
     background-color: #FFE662;
     cursor: pointer;
 }
 
-.login-submit-button:hover{
-    background-color: #f8ca4c;
+.login-submit-button:focus{
+    border: 2px solid rgb(156, 0, 0);
+}
+
+.isLogged-content{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+}
+
+
+.isLogged-content-notifi{
+    margin: 1rem;
+    padding: 3rem;
+    text-align: center;
+    color: rgb(2, 94, 2);
+    font-weight: 600;
+    border: none;
+    background-color: #fff7e0;
+}
+
+.isLogged-content-logout-btn{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+    border-radius: 6px;
+    background-color: #640202;
+    color: white;
+    width: 6rem;
 }
