--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -1,5 +1,6 @@
 .full-container{
-    width: 80%; 
+    width: 90%; 
+    margin-left: 8vw;
     background-color: rgba(255, 255, 255, 0.98);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -95,10 +96,10 @@
   border-width: 0.25rem;
   border-color:#0c920c ;
 }
+
 .action-bar-btn-cancel:focus{
   background-color: #fae8e8;
 }
-
 
 .action-bar-btn:focus {     
     background-color:#FFEF9C;    
@@ -109,14 +110,11 @@
     height: 2.6rem;
 }
 
-
-
 .detail-table-container{
     position: absolute;
     top: 20%;
     left: 25%;
 }
-
 
 /* Custom Checkbox creation */
 .checkbox-container {
@@ -240,9 +238,29 @@
     cursor: pointer;
   }
 
-
   .error-message{
     font-size: 14px;
     margin-left: 15rem;
     color: rgb(185, 2, 2);
   }
+
+  
+@media (max-width: 768px) {
+  .full-container{
+    margin-top: 8rem;
+    width: 94%; 
+}
+  .title-search-content{
+    display: flex;
+    flex-direction: column; 
+}
+  .action-bar{
+  flex-direction: column;
+}
+
+.header-item-add-button, #header-item-add-button{
+  padding: 0.3rem;
+  height: auto;
+}
+
+}
