--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -16,12 +16,16 @@
     box-shadow: 10px 10px 54px -6px rgb(224, 200, 134);
 }
 
+.sidebar-logo-img{
+    height: 7rem;
+    width: 7rem;
+}
+
 .sidebar-logo-container{
     font-size: 32px;
     padding: 2rem 2rem 2rem 2rem;
-    height: 8%;
+    height: 6%;
     text-align: center;
-    
 }
 
 .sidebar-logo a{
@@ -41,7 +45,6 @@
 
 
 .side-bar-page-list{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
     font-weight: 600;
     line-height: 32px;
@@ -54,7 +57,7 @@
 }
 
 .side-bar-page-list-item a{
-    display: block;
+    display: flex;
     text-decoration: none;
     padding: 0.5rem 0.5rem 0.5rem 1rem;
     border-radius: 8px;
@@ -69,3 +72,51 @@
     border-radius: 10px;
     box-shadow: 6px 7px 10px -6px rgb(255, 192, 20);
 }
+
+
+@media (max-width: 768px) {
+    .sidebar-container{
+        display: flex;
+        height:auto;
+        width: 100%;
+        z-index: 800;
+        background-color: white;
+        border: none;
+    } 
+    .side-bar-page-list{
+        display: flex;
+        flex-direction: row;
+        line-height: 12px;
+        z-index: 1100;
+        padding: 0;
+    }
+
+    .sidebar-logo-container{
+       padding: 0.2rem;
+       display: flex;
+       justify-content: space-between;
+    }
+
+    .sidebar-logo-img{
+        height: 3rem;
+        width: 3rem;
+    }
+
+    .side-bar-page-list-item a{
+        display: block;
+        padding-left: 2px;
+        margin: 0.1rem;
+        font-weight: 700;
+        border-bottom: 2px black;
+        font-size: 10px;
+    }
+
+    .active{
+        background-color: transparent;
+        color: #2b0000;
+        border-radius: 0px;
+        box-shadow: none;
+    }
+    
+
+  }
