--- a/src/routes/routeStyles.css
+++ b/src/routes/routeStyles.css
@@ -11,7 +11,16 @@ body{
 
 .main-container{
     flex: 6;
-    margin-left: 16vw;
+    margin-left: 14vw;
     padding-left: 1rem;
     padding-right: 1rem;
+}
+
+@media (max-width: 768px) {
+    .main-container{
+        flex: 1;
+        margin-left: 0rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
