--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -46,7 +46,7 @@
     font-weight: 600;
     color: rgb(34, 32, 32);
     height: 3rem;
-    margin-right: 0.4rem;
+    margin: 0.4rem 0.4rem 0 0;
     opacity: 0.9;
 }
 
