--- a/src/components/SearchBarStyles.css
+++ b/src/components/SearchBarStyles.css
@@ -1,4 +1,3 @@
-/* SearchBar.css */
 
 .search-bar {
     display: flex;
@@ -8,6 +7,8 @@
 
   .search-bar-input{
     padding: 8px;
+    height: 1.5rem;
+    width: 5rem;
     border-radius: 4px;
     border: 1px solid #ccc;
   }
