--- a/src/components/SearchBarStyles.css
+++ b/src/components/SearchBarStyles.css
@@ -8,9 +8,10 @@
   .search-bar-input{
     padding: 8px;
     height: 1.5rem;
-    width: 5rem;
+    width: 6rem;
     border-radius: 4px;
     border: 1px solid #ccc;
+    background-color: #fff4be;
   }
   
   .search-bar-icon {
