Redirect to location

--- a/src/pages/order/OrderStyles.css
+++ b/src/pages/order/OrderStyles.css
@@ -39,6 +39,11 @@
   font-weight:'bold';
 }
 
+.prediction{
+  background-color: #464646;
+  color: white;
+}
+
 
 @media (max-width: 768px) {
   .report-content, .action-bar-btn-content{
